--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "backbone-crux",
-  "version": "1.1.0",
-  "private": true,
-  "dependencies": {},
+  "version": "1.1.14",
+  "dependencies": {
+      "backbone": "1.1.x"
+  },
   "devDependencies": {
     "grunt": "0.4.x",
     "grunt-exec": "0.4.x",
