--- a/bower.json
+++ b/bower.json
@@ -7,14 +7,14 @@
     },
     "devDependencies": {
         "jasmine": "1.3.x",
-        "jasmine-ajax": "x.x.x",
+        "jasmine-ajax": "1.x",
         "phantom": "1.9.x",
         "requirejs": "2.1.x",
         "backbone": "1.0.x",
         "backbone.marionette": "1.0.x",
         "backbone.babysitter": "0.0.x",
         "backbone.wreqr": "0.2.x",
-        "backbone.paginator": "x",
+        "backbone.paginator": "1.x",
         "underscore": "1.4.x",
         "jquery": "1.9.x",
         "purl": "git://github.com/allmarkedup/purl#2.3.x"
