--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
   "name": "backbone-crux",
-  "version": "2.2.3",
+  "version": "2.2.4",
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "grunt": "0.4.x",
-    "grunt-exec": "0.4.x",
-    "grunt-contrib-watch": "0.2.x",
-    "grunt-contrib-jshint": "0.6.x",
-    "phantomjs": "1.9.x"
+    "gulp": "3.8.11",
+    "gulp-shell": "0.4.1",
+    "gulp-jshint": "1.11.0",
+    "gulp-util": "3.0.4",
+    "gulp-showhelp": "1.0.3",
+    "globby": "2.0.0",
+    "minimist": "1.1.1",
+    "run-headless-chromium": "0.0.9",
+    "requirejs": "2.1.17",
+    "jshint-stylish": "1.0.2",
+    "jasmine-core": "2.3.4",
+    "jasmine-ajax": "3.1.1",
+    "jasmine-jquery": "2.1.0",
+    "jquery": "2.1.1",
+    "backbone": "1.1.2",
+    "backbone.paginator": "2.0.2",
+    "underscore": "1.7.0",
+    "URIjs": "1.15.1"
   }
 }
