Defer .execute() until specs have loaded T3275

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "backbone-crux",
   "version": "2.2.5",
   "private": true,
+  "scripts": {
+    "test": "gulp test"
+  },
   "dependencies": {},
   "devDependencies": {
     "gulp": "3.8.11",
