--- a/package.json
+++ b/package.json
@@ -18,27 +18,30 @@
     "url": "https://github.com/CodeYellowBV/backbone-crux/issues"
   },
   "scripts": {
-    "test": "gulp test"
+    "lint": "eslint src",
+    "build": "rm -f dist/** && rollup -c",
+    "pretest": "npm run -s build && npm run -s lint",
+    "test": "ava",
+    "preversion": "npm run -s test",
+    "version": "git add -A dist"
   },
   "dependencies": {},
   "devDependencies": {
-    "gulp": "3.8.11",
-    "gulp-shell": "0.4.1",
-    "gulp-util": "3.0.4",
-    "gulp-showhelp": "1.0.3",
-    "globby": "2.0.0",
-    "minimist": "1.1.1",
-    "run-headless-chromium": "0.0.9",
-    "requirejs": "2.1.17",
-    "jasmine-core": "2.3.4",
-    "jasmine-ajax": "3.1.1",
-    "jasmine-jquery": "2.1.0",
-    "jquery": "2.1.1",
-    "backbone": "1.1.2",
-    "backbone.paginator": "2.0.2",
-    "underscore": "1.7.0",
-    "URIjs": "1.15.1",
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "backbone": "1.3.3",
+    "backbone.paginator": "2.0.5",
     "eslint": "^2.13.0",
-    "eslint-config-codeyellow": "^0.3.0"
+    "eslint-config-codeyellow": "^0.3.0",
+    "jquery": "2.2.4",
+    "rollup": "^0.31.2",
+    "rollup-plugin-babel": "^2.5.1",
+    "underscore": "1.8.3"
+  },
+  "ava": {
+    "babel": {
+      "presets": [
+        "es2015"
+      ]
+    }
   }
 }
