--- a/package.json
+++ b/package.json
@@ -21,27 +21,30 @@
     "lint": "eslint src",
     "build": "rm -f dist/** && rollup -c",
     "pretest": "npm run -s build && npm run -s lint",
-    "test": "ava",
+    "test": "ava --require babel-register",
     "preversion": "npm run -s test",
     "version": "git add -A dist"
   },
   "dependencies": {},
   "devDependencies": {
+    "ava": "^0.15.2",
+    "babel-plugin-module-alias": "^1.4.0",
     "babel-preset-es2015-rollup": "^1.1.1",
     "backbone": "1.3.3",
+    "backbone-relation": "^0.2.7",
+    "backbone.marionette": "^2.4.7",
     "backbone.paginator": "2.0.5",
+    "backbone.stickit": "^0.9.2",
     "eslint": "^2.13.0",
     "eslint-config-codeyellow": "^0.3.0",
+    "i": "^0.3.5",
     "jquery": "2.2.4",
+    "npm": "^3.9.6",
     "rollup": "^0.31.2",
     "rollup-plugin-babel": "^2.5.1",
     "underscore": "1.8.3"
   },
   "ava": {
-    "babel": {
-      "presets": [
-        "es2015"
-      ]
-    }
+    "babel": "inherit"
   }
 }
