--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "eslint src",
     "build": "rm -f dist/** && rollup -c",
     "pretest": "npm run -s build && npm run -s lint",
-    "test": "ava --require babel-register",
+    "test": "ava --require babel-register --require ./test/helpers/register",
     "preversion": "npm run -s test",
     "version": "git add -A dist"
   },
@@ -31,6 +31,7 @@
   "main": "dist/backbone-crux.js",
   "dependencies": {},
   "devDependencies": {
+    "JQDeferred": "^2.1.0",
     "ava": "^0.15.2",
     "babel-plugin-module-alias": "^1.4.0",
     "babel-preset-es2015-rollup": "^1.1.1",
@@ -41,8 +42,11 @@
     "backbone.stickit": "^0.9.2",
     "eslint": "^2.13.0",
     "eslint-config-codeyellow": "^0.3.0",
+    "jsdom": "^9.2.1",
+    "jsdom-global": "^2.0.0",
     "rollup": "^0.31.2",
     "rollup-plugin-babel": "^2.5.1",
+    "sinon": "^1.17.4",
     "underscore": "1.8.3"
   },
   "ava": {
