--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "backbone.stickit": "^0.9.2",
     "eslint": "^2.13.0",
     "eslint-config-codeyellow": "^0.3.0",
+    "jquery": "^3.0.0",
     "jsdom": "^9.2.1",
     "jsdom-global": "^2.0.0",
     "rollup": "^0.31.2",
